syntax = "proto3";

package api;
option go_package = "github.com/onepanelio/core/api/gen";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ConfigService {
    rpc GetConfig (google.protobuf.Empty) returns (GetConfigResponse) {
        option (google.api.http) = {
            get: "/apis/v1beta1/config"
        };
    }

    rpc GetNamespaceConfig (GetNamespaceConfigRequest) returns (GetNamespaceConfigResponse) {
        option (google.api.http) = {
            get: "/apis/v1beta1/{namespace}/config"
        };
    }
}

message GetNamespaceConfigRequest {
    string namespace = 1;
}

message GetNamespaceConfigResponse {
    string bucket = 1;
}

message GetConfigResponse {
    string apiUrl = 1;
    string domain = 2;
    string fqdn = 3;
    NodePool nodePool = 4;
}

message NodePoolOption {
    string name = 1;
    string value = 2;
}

message NodePool {
    string label  = 1;
    repeated NodePoolOption options = 2;
}